--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
-  "name": "nexusdev-portfolio",
+  "name": "portfolio-fe",
   "private": true,
-  "version": "1.0.0",
-  "type": "module",
+  "version": "0.0.0",
+  "homepage": "https://rio-raj-006.github.io/Portfolio-FE",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@google/genai": "^1.34.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0"
-  },
-  "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^5.1.2",
-    "typescript": "^5.7.0",
-    "vite": "^6.0.0"
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   }
 }
