--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,11 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Configure Git identity 
+        run: |
+           git config --global user.name "github-actions[bot]"
+           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+
       - name: Deploy
         run: npm run deploy
